sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:20: error: ')' expected but '}' found.
  }
  ^